[package]
name = "p2p"
description = "Peer-to-peer network"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] } # for CLI
clap_complete = "4.5.38" # for shell completion
crossterm = "0.28.1" # for realtime chat
env_logger = "0.11.5" # for pretty logging
log = "0.4.22" # for logging
openssl = "0.10.68" # for crypto
rand = "0.8.5" # for RNG
serde = { version = "1.0.215", features = ["derive"] } # for serialization
serde_json = "1.0.133" # for JSON serialization
tokio = { version = "1.42.0", features = ["full"] } # for async
toml = "0.8.19"
